--- a/war/WEB-INF/web.xml
+++ b/war/WEB-INF/web.xml
@@ -12,6 +12,25 @@ http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" version="2.5">
 		<servlet-name>Zdom</servlet-name>
 		<url-pattern>/zdom</url-pattern>
 	</servlet-mapping>
+	
+	<servlet>
+		<servlet-name>Adduser</servlet-name>
+		<servlet-class>com.ddetyuk.AdduserServlet</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>Adduser</servlet-name>
+		<url-pattern>/adduser</url-pattern>
+	</servlet-mapping>
+
+	<servlet>
+		<servlet-name>Test</servlet-name>
+		<servlet-class>com.ddetyuk.TestServlet</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>Test</servlet-name>
+		<url-pattern>/test</url-pattern>
+	</servlet-mapping>
+		
 	<welcome-file-list>
 		<welcome-file>index.html</welcome-file>
 	</welcome-file-list>
