--- a/war/WEB-INF/web.xml
+++ b/war/WEB-INF/web.xml
@@ -30,6 +30,16 @@ http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" version="2.5">
 		<servlet-name>Test</servlet-name>
 		<url-pattern>/test</url-pattern>
 	</servlet-mapping>
+	
+	<servlet>
+		<servlet-name>Persistent</servlet-name>
+		<servlet-class>com.ddetyuk.PersistentServlet</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>Persistent</servlet-name>
+		<url-pattern>/persistent</url-pattern>
+	</servlet-mapping>
+	
 		
 	<welcome-file-list>
 		<welcome-file>index.html</welcome-file>
